force-app/main/default/objects/FLM_MasterBlaster__c/FLM_MasterBlaster__c.object-meta.xml
<CustomObject>
    <label>FLM MasterBlaster</label>
    <nameField>
        <label>FLM MasterBlaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLM MasterBlasters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>