force-app/main/default/objects/FLM_MasterBlaster__c/fields/ATEX__c.field-meta.xml
<CustomField>
    <fullName>ATEX__c</fullName>
    <label>ATEX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>