force-app/main/default/objects/FLM_MasterBlaster__c/fields/CUTR__c.field-meta.xml
<CustomField>
    <fullName>CUTR__c</fullName>
    <label>CUTR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>