force-app/main/default/objects/FLM_MasterBlaster__c/fields/ElemSizeCode__c.field-meta.xml
<CustomField>
    <fullName>ElemSizeCode__c</fullName>
    <label>ElemSizeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>