force-app/main/default/objects/FLM_MasterBlaster__c/fields/HousingMatlCode__c.field-meta.xml
<CustomField>
    <fullName>HousingMatlCode__c</fullName>
    <label>HousingMatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>