force-app/main/default/objects/FLM_MasterBlaster__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <label>NACE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>