force-app/main/default/objects/FLM_MasterBlaster__c/fields/OffsetBases__c.field-meta.xml
<CustomField>
    <fullName>OffsetBases__c</fullName>
    <label>OffsetBases</label>
    <length>30</length>
    <type>Text</type>
</CustomField>