force-app/main/default/objects/FLM_MasterBlaster__c/fields/OpenClosedEndCondition__c.field-meta.xml
<CustomField>
    <fullName>OpenClosedEndCondition__c</fullName>
    <label>Open-ClosedEndCondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>