force-app/main/default/objects/FLM_MasterBlaster__c/fields/OperationalTemp__c.field-meta.xml
<CustomField>
    <fullName>OperationalTemp__c</fullName>
    <label>OperationalTemp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>