force-app/main/default/objects/FLM_MasterBlaster__c/fields/USCG__c.field-meta.xml
<CustomField>
    <fullName>USCG__c</fullName>
    <label>USCG</label>
    <length>30</length>
    <type>Text</type>
</CustomField>