force-app/main/default/objects/FLM_MasterBlaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ATEX__c</columns>
    <columns>BodyMatlCode__c</columns>
    <columns>Brand__c</columns>
    <columns>CalculatedFlowUOM__c</columns>
    <columns>CUTR__c</columns>
    <columns>Deflagration_Detonation__c</columns>
    <columns>ElemMatlCode__c</columns>
    <columns>ElemSizeCode__c</columns>
    <columns>GasGroupLevel__c</columns>
    <columns>HousingMatlCode__c</columns>
    <columns>OffsetBases__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NACE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>